set(QTMATERIAL3_CORE_SOURCES
    qtmaterialwidget.cpp
    qtmaterialthemecontextbinding.cpp
    private/qtmaterialthemecontextpropagation.cpp
    qtmaterialcontrol.cpp
    qtmaterialsurface.cpp
    qtmaterialoverlaysurface.cpp
    qtmaterialabstractbutton.cpp
    qtmaterialselectioncontrol.cpp
    private/qtmaterialaccessibilityhelper.cpp
    private/qtmaterialmetadata_p.h
    qtmaterialasyncstate.cpp
    qtmaterialproxystyle.cpp
)

set(QTMATERIAL3_CORE_HEADERS
    ${PROJECT_SOURCE_DIR}/include/qtmaterial/core/qtmaterialdensity.h
    ${PROJECT_SOURCE_DIR}/include/qtmaterial/core/qtmaterialwidget.h
    ${PROJECT_SOURCE_DIR}/include/qtmaterial/core/qtmaterialthemecontextbinding.h
    ${PROJECT_SOURCE_DIR}/include/qtmaterial/core/qtmaterialinteractionstate.h
    ${PROJECT_SOURCE_DIR}/include/qtmaterial/core/qtmaterialeventcompat.h
    ${PROJECT_SOURCE_DIR}/include/qtmaterial/core/private/qtmaterialaccessibilityhelper_p.h
    ${PROJECT_SOURCE_DIR}/include/qtmaterial/core/qtmaterialcontrol.h
    ${PROJECT_SOURCE_DIR}/include/qtmaterial/core/qtmaterialsurface.h
    ${PROJECT_SOURCE_DIR}/include/qtmaterial/core/qtmaterialoverlaysurface.h
    ${PROJECT_SOURCE_DIR}/include/qtmaterial/core/qtmaterialabstractbutton.h
    ${PROJECT_SOURCE_DIR}/include/qtmaterial/core/qtmaterialselectioncontrol.h
    ${PROJECT_SOURCE_DIR}/include/qtmaterial/core/qtmaterialasyncstate.h
    ${PROJECT_SOURCE_DIR}/include/qtmaterial/core/qtmaterialproxystyle.h
)

qtm3_add_module(
    qtmaterial3_core
    Core
    QtMaterial3Core
    QTMATERIAL3_CORE_LIBRARY
    ${QTMATERIAL3_CORE_SOURCES}
    ${QTMATERIAL3_CORE_HEADERS}
)

target_link_libraries(
    qtmaterial3_core
    PUBLIC
        qtmaterial3_foundation
        qtmaterial3_theme
        Qt${QT_VERSION_MAJOR}::Core
        Qt${QT_VERSION_MAJOR}::Gui
        Qt${QT_VERSION_MAJOR}::Widgets
    PRIVATE
        qtmaterial3_integration
)

